last push without celery

--- a/templates/dj_auto/import_data.html
+++ b/templates/dj_auto/import_data.html
@@ -18,6 +18,7 @@
 		</div>
 		<button class="btn btn-success m-4 ms-0">SUBMIT</button>
 	</form>
+	{% include "base/alerts.html" %}
 </div>
 
 {% endblock body %}
